fix(design): Scrollbar, Indicator 수정   - scrollbar 디자인 수정. (webkit 기반 브라우저에서만 동작)   - sending status indicator 수정

--- a/client/app/main.css
+++ b/client/app/main.css
@@ -659,14 +659,7 @@ input[type="button"] {
 .icon-loading-img {
   background: url('../assets/images/jd_loading.gif') center center no-repeat;
 }
-.icon-loading-small {
-    background-image: url('../assets/images/icon_loading.gif');
-    background-size: 11px 11px;
-    width: 11px;
-    height: 11px;
-  vertical-align: middle;
-    display: inline-block;
-}
+
 .image-background {
   background: url('../assets/images/checkered.png');
   min-width: 40px;
@@ -1180,3 +1173,66 @@ input[type="radio"] {
   }
 }
 
+/********************************************
+                 스크롤바
+********************************************/
+.scroll_blue {
+  background-color: #fff;
+  scrollbar-shadow-color: #fff;
+  scrollbar-highlight-color: #fff;
+  scrollbar-face-color: #fff;
+  scrollbar-3dlight-color: #fff;
+  scrollbar-darkshadow-color: #fff;
+  scrollbar-track-color: #fff;
+  scrollbar-arrow-color: #fff;
+}
+.scroll_blue ::-webkit-scrollbar{
+  -webkit-appearance: none;
+  width:10px;
+  height:10px;
+  background-color: #f1f4f8;
+  border-radius: 10px;
+}
+.scroll_blue ::-webkit-scrollbar-thumb{
+  background-color:#cad7e0;
+  border:1px solid transparent;
+  border-radius:10px;
+  background-clip:content-box;
+}
+.scroll_blue ::-webkit-scrollbar-thumb:hover{
+  background-color: #acbecd;
+}
+.scroll_blue ::-webkit-scrollbar-corner{
+  background-color: transparent;
+}
+
+.scroll_gray {
+  background-color: #fff;
+  scrollbar-shadow-color: #fff;
+  scrollbar-highlight-color: #fff;
+  scrollbar-face-color: #fff;
+  scrollbar-3dlight-color: #fff;
+  scrollbar-darkshadow-color: #fff;
+  scrollbar-track-color: #fff;
+  scrollbar-arrow-color: #fff;
+}
+
+.scroll_gray ::-webkit-scrollbar{
+  -webkit-appearance: none;
+  width:10px;
+  height:10px;
+  background-color: #f3f4f9;
+  border-radius: 10px;
+}
+.scroll_gray ::-webkit-scrollbar-thumb{
+  background-color:#d0cfd4;
+  border:1px solid transparent;
+  border-radius:10px;
+  background-clip:content-box;
+}
+.scroll_gray ::-webkit-scrollbar-thumb:hover{
+  background-color: #bababe;
+}
+.scroll_gray ::-webkit-scrollbar-corner{
+  background-color: transparent;
+}
